--- a/backend/package.json
+++ b/backend/package.json
@@ -12,28 +12,17 @@
     "dependencies": {
         "axios": "^1.1.2",
         "bcryptjs": "^2.4.3",
-        "body-parser": "^1.20.0",
         "compression": "^1.7.4",
-        "connect-ensure-login": "^0.1.1",
         "connect-flash": "^0.1.1",
-        "connect-mongo": "^4.6.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.2",
         "email-validator": "^2.0.4",
         "express": "^4.18.1",
-        "express-formidable": "^1.2.0",
         "express-session": "^1.17.3",
-        "express-validator": "^6.14.2",
         "fs": "^0.0.1-security",
-        "helmet": "^6.0.0",
         "jsonwebtoken": "^8.5.1",
-        "morgan": "^1.10.0",
-        "multer": "^1.4.5-lts.1",
-        "mysql": "^2.18.1",
-        "passport": "^0.6.0",
-        "passport-local": "^1.0.0",
-        "passport-local-mongoose": "^7.1.2"
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
